--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -23,6 +23,7 @@ hh1 {
   font-size: 40px;
   font-family: "Viner Hand ITC"
 }
+
 .hhh1 {
   color: white;
   font-size: 20px;
@@ -44,7 +45,7 @@ hh1 {
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
 }
-
+ /* Hej */
 .header {
   padding: 60px;
   text-align: center;
