--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -45,7 +45,7 @@ hh1 {
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
 }
- /* Hej */
+ /* Hej på dig */
 .header {
   padding: 60px;
   text-align: center;
