--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -45,7 +45,8 @@ hh1 {
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
 }
- /* Hej på dig */
+
+/* Hej på dig */
 .header {
   padding: 60px;
   text-align: center;
@@ -320,7 +321,7 @@ ul.breadcrumb {
   padding: 10px 16px;
   list-style: none;
 /*   background-color: #eee;*/
-  background-color: #fafafa;
+/*  background-color: #fafafa;*/
 }
 
 /* Display list items side by side */
