--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -44,8 +44,8 @@
                     {{ form.picture(class="form-control-file") }}
                     {% if form.picture.errors %}
                         {% for error in form.picture.errors %}
-                            <span class="text-danger">{{ error }}</span></br>
-                        {% endfor %}
+                            <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
                     {% endif %}
                 </div>
             </fieldset>
