--- a/flaskblog/templates/create_picture.html
+++ b/flaskblog/templates/create_picture.html
@@ -14,7 +14,11 @@
                     {% endfor %}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div action="/action_page.php">
+              <label for="date_taken">Date:</label>
+              <input type="date" id="date_taken" name="date_taken">
+            </div>
+            <!-- <div class="form-group">
                 {{ form.date_taken.label(class="form-control-label") }}
                 {% if form.date_taken.errors %}
                     {{ form.date_taken(class="form-control form-control-lg is-invalid") }}
@@ -26,7 +30,7 @@
                 {% else %}
                     {{ form.date_taken(class="form-control form-control-lg") }}
                 {% endif %}
-            </div>
+            </div>-->
             <div class="form-group">
                 {{ form.place_taken.label(class="form-control-label") }}
                 {% if form.place_taken.errors %}
