--- a/flaskblog/templates/create_picture.html
+++ b/flaskblog/templates/create_picture.html
@@ -15,7 +15,7 @@
                 {% endif %}
             </div>
             <div action="/action_page.php">
-              <label for="date_taken">Date:</label>
+              <label for="date_taken">Date taken:</label>
               <input type="date" id="date_taken" name="date_taken">
             </div>
             <!-- <div class="form-group">
