--- a/flaskblog/templates/start.html
+++ b/flaskblog/templates/start.html
@@ -1,4 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Om mig</h1>
+    <hh2>Welcome!</hh2>
+<h5>Please sign in to see and upload pictures.</h5>
 {% endblock content %}
