--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -3,28 +3,21 @@ body {
   color: #333333;
   margin-top: 100px;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  color: #444444;
-}
-
-h0 {
-  display: block;
-  font-size: 30px;
-  margin-top: 0px;
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  font-weight: bold;
-}
+/*
+/*
+/* Fonts */
 
 hh1 {
   color: white;
   font-size: 40px;
   font-family: "Viner Hand ITC"
 }
-
-.hhh1 {
+hh2 {
+  color: black;
+  font-size: 40px;
+  font-family: "Viner Hand ITC"
+}
+hhh1 {
   color: white;
   font-size: 20px;
   font-family: "Bradley Hand ITC"
@@ -54,7 +47,7 @@ hh1 {
   font-size: 30px;
 }
 
-/* Experiment */
+/**/
 /* The sidebar menu */
 .sidenav {
   width: 200px; /* Set the width of the sidebar */
@@ -69,7 +62,8 @@ hh1 {
   border-radius: 3px;
   margin-bottom: 20px;
 }
-
+/*end of sidebar*/
+/**/
 
 /* The navigation menu links */ /*
 .sidenav a {
@@ -91,13 +85,18 @@ hh1 {
   margin-right: 50px; /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
+.main_wide {
+   /* Same as the width of the sidebar */
+  padding: 0px 10px;
+}
+
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
-/* kommentar */
+/*  */
 .add_button {
   width: 170px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -177,11 +176,13 @@ a.article-title:hover {
 
 
 /* Experiment */
-.row {
+/*.row {
   display: flex;
   flex-wrap: wrap;
   padding: 0 4px;
-}
+}*/
+
+
 /*  */
 /* Create four equal columns that sits next to each other */
 .column {
@@ -189,8 +190,9 @@ a.article-title:hover {
 /*   max-width: 25%; */
   padding: 0 4px;
 }
-
+/* how all the pictures are displayed */
 .column img {
+  border-radius: 10px;
   margin-bottom: 8px;
   vertical-align: middle;
   height: 250px; /* Höjd på bilderna */
@@ -206,7 +208,7 @@ a.article-title:hover {
 Slut på experiment */
 
 
-/* Experiment */
+/* two folders in a row*/
 .row_folder {
   display: flex;
   flex-wrap: wrap;
@@ -248,6 +250,13 @@ Slut på experiment */
   height: 250px; /* Höjd på bilderna */
 }
 
+.crop img {
+ height: auto;
+ width: 400px;
+
+}
+
+
 .crop {
   border-radius: 25px;
   margin-top: 8px;
@@ -262,10 +271,6 @@ Slut på experiment */
   margin: 0 auto; /* Center it */
 }
 
-.crop img {
- height: auto;
- width: 400px;
-}
 
 .crop:hover {
 /*   border: 2px solid #777; */
@@ -312,43 +317,42 @@ Slut på experiment */
   color: #a6a6a6;
 }
 
-/*Slut på experiment */
 
 
-/* filnavigering */
-/* Style the list */
+
+
+/**/
+/* Breadcrumb navbar */
+
+/* Display list items side by side */
 ul.breadcrumb {
   padding: 10px 16px;
   list-style: none;
 /*   background-color: #eee;*/
   background-color: #fafafa;
 }
-
-/* Display list items side by side */
 ul.breadcrumb li {
   display: inline;
   font-size: 18px;
 }
-
 /* Add a slash symbol (/) before/behind each list item */
 ul.breadcrumb li+li:before {
   padding: 8px;
   color: black;
   content: "/\00a0";
 }
-
 /* Add a color to all links inside the list */
 ul.breadcrumb li a {
   color: #0275d8;
   text-decoration: none;
 }
-
 /* Add a color on mouse-over */
 ul.breadcrumb li a:hover {
   color: #01447e;
   text-decoration: underline;
 }
-/* slut på filnavigering */
+/* slut på breadcrumb */
+/**/
 
 .article-metadata {
   padding-bottom: 1px;
