--- a/flaskblog/templates/folders.html
+++ b/flaskblog/templates/folders.html
@@ -10,7 +10,8 @@
 
     <!-- Page content -->
     <div class="main">
-        <h1>Folders</h1>
+        <h1>Albums</h1>
+        <h5>Here are all the albums. Please choose one to see the respcetive pictures</h5>
         <div class="row_folder">
             {% for folder in folders %}
             <div class="column_folder1">
