--- a/flaskblog/templates/create_picture.html
+++ b/flaskblog/templates/create_picture.html
@@ -14,6 +14,17 @@
                     {% endfor %}
                 {% endif %}
             </div>
+            <!--
+            <form action="/action_page.php">
+              <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+              <label for="vehicle1"> I have a bike</label><br>
+              <input type="checkbox" id="vehicle2" name="vehicle2" value="Car">
+              <label for="vehicle2"> I have a car</label><br>
+              <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat">
+              <label for="vehicle3"> I have a boat</label><br><br>
+              <input type="submit" value="Submit">
+            </form>
+            -->
             <div action="/action_page.php">
               <label for="date_taken">Date taken:</label>
               <input type="date" id="date_taken" name="date_taken">
@@ -54,7 +65,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
-                    {{ form.description(class="form-control form-control-lg", rows="10") }}
+                    {{ form.description(class="form-control form-control-lg", rows="5") }}
                 {% endif %}
             </div>
         </fieldset>
