--- a/flaskblog/templates/my_pictures.html
+++ b/flaskblog/templates/my_pictures.html
@@ -73,5 +73,8 @@
                 </div>
               </div>
             </div>
+    -->
+    </div>
+    <!--
     {% endfor %}
 {% endblock content %}
