--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -16,7 +16,7 @@
     <div class="main">
         <div class="content-section">
             <h1>Welcome!</h1>
-            <h6> Welcome to the internal webpage for the association "Sällskapet medeltida skepp". This is a place where we can share and watch pictures from our trips together</h6>
+            <h6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together</h6>
         </div>
         <div class="row">
             {% for picture in pictures %}
