delete comment mm

--- a/flaskblog/templates/edit_picture.html
+++ b/flaskblog/templates/edit_picture.html
@@ -18,7 +18,7 @@
             -->
             <div action="/action_page.php">
               <label for="date_taken">Date taken:</label>
-              <input type="date" id="date_taken" name="date_taken">
+              <input type="date" id="date_taken" name="date_taken" value="{{form.date_taken._value()}}">
             </div>
             <!-- <div class="form-group">
                 {{ form.date_taken.label(class="form-control-label") }}
