--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -15,8 +15,8 @@
     <!-- Page content -->
     <div class="main">
         <div class="content-section">
-            <h1>Welcome!</h1>
-            <h6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together</h6>
+            <hh1>Welcome!</hh1> <br>
+            <hh6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together</hh6>
         </div>
         <div class="row">
             {% for picture in pictures %}
