--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -22,7 +22,7 @@
     <header class="site-header">
       <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
         <div class="container">
-          <a class="navbar-brand mr-4" href="/"><hh1>Vidfamne</hh1></a>
+          <a class="navbar-brand mr-4" href="/"><hh1w>Vidfamne</hh1w></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
