--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -3,14 +3,14 @@ body {
   color: #333333;
   margin-top: 100px;
 }
-/*
-/*
+
 /* Fonts */
 
 hh1w {
   color: white;
   font-size: 40px;
-  font-family: "Viner Hand ITC"
+  /* font-family: "Viner Hand ITC" */
+  font-family: "Autour One"
 }
 hh1 {
   color: black;
@@ -64,7 +64,7 @@ hh6 {
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 100px; /* Stay at the top */
-  right: 20px;
+  right: 0px;
   overflow-x: hidden; /* Disable horizontal scroll */
   background: #ffffff;
   padding: 10px 20px;
