--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="//db.onlinewebfonts.com/c/99d504622af69baa79ef84fad6985031?family=Viner+Hand+ITC" rel="stylesheet" type="text/css"/>
+    <link href="https://db.onlinewebfonts.com/c/99d504622af69baa79ef84fad6985031?family=Viner+Hand+ITC" rel="stylesheet" type="text/css"/>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
