--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -3,19 +3,19 @@ body {
   color: #333333;
   margin-top: 100px;
 }
-
+/*
+/*
 /* Fonts */
 
 hh1w {
   color: white;
   font-size: 40px;
-  /* font-family: "Viner Hand ITC" */
-  font-family: "Autour One"
+  font-family: "Viner Hand ITC"
 }
 hh1 {
   color: black;
   font-size: 40px;
-  font-family: "Viner Hand ITC"
+  font-family: "arial"
 }
 hh {
   color: white;
@@ -26,7 +26,7 @@ hh {
 hh6 {
   color: black;
   font-size: 20px;
-  font-family: "Viner Hand ITC"
+  font-family: "arial"
 }
 
 .hej{
@@ -64,7 +64,7 @@ hh6 {
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
   z-index: 1; /* Stay on top */
   top: 100px; /* Stay at the top */
-  right: 0px;
+  right: 20px;
   overflow-x: hidden; /* Disable horizontal scroll */
   background: #ffffff;
   padding: 10px 20px;
