--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -20,9 +20,11 @@
         </div>
         <div class="row">
             {% for picture in pictures %}
+            <a href="/picture/{{picture.id}}">
               <div class="column">
                 <img src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}">
               </div>
+            </a>
             {% endfor %}
         </div> <!--
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -35,7 +37,7 @@
                 {% endfor %}
             </div>
         </div> -->
-        {% for picture in pictures %}
+        <!--{% for picture in pictures %}
             <div class="row">
               <div class="col-md-4">
                 <div class="thumbnail">
@@ -52,8 +54,8 @@
         {% endfor %}
         {% for picture in pictures %}
             <article class="media image-section">
-              <!--  <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + picture.author.profile_pic) }}">
-              -->
+                <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + picture.author.profile_pic) }}">
+
               <div class="media-body">
                 <div class="article-metadata">
                   <a class="mr-2" href="#">{{ picture.author.username }}</a>
@@ -61,14 +63,14 @@
                 </div>
                 <img class="img-fluid" src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}">
                 <p class="article-content">{{ picture.description }} </p>
-                <!-- {% if picture.content_type == 'plain' %}
+                 {% if picture.content_type == 'plain' %}
                 <p class="article-content">{{ picture.content | safe | striptags | truncate(400) }}</p>
                 {% elif picture.content_type == 'html' %}
                 <p class="article-content">{{ picture.content | safe | striptags | truncate(400) }}</p>
                 {% elif picture.content_type == 'markdown' %}
                 <p class="article-content">{{ picture.content | markdown | striptags | truncate(400) }}</p>
                 {% endif  %} -->
-              </div>
+           <!--   </div>
             </article>
         </div>
         <div class="row">
@@ -84,5 +86,7 @@
                 </div>
               </div>
             </div>
-    {% endfor %}
+
+    {% endfor %}-->
+    </div>
 {% endblock content %}
