--- a/flaskblog/templates/my_pictures.html
+++ b/flaskblog/templates/my_pictures.html
@@ -28,7 +28,7 @@
             </a>
             {% endfor %}
         </div>
-        <!--<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+       <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 {% for picture in pictures %}
                     <div class="carousel-item">
@@ -75,8 +75,9 @@
                 </div>
               </div>
             </div>
-    -->
+
     </div>
-    <!--
-    {% endfor %}
+
+    {% endfor %}-->
+    </div>
 {% endblock content %}
