--- a/flaskblog/templates/picture.html
+++ b/flaskblog/templates/picture.html
@@ -3,7 +3,7 @@
   <article class="media content-section">
     <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + picture.author.profile_pic) }}">
     <div class="media-body">
-      <div class="article-metadata">
+<div class="article-metadata">
         <a class="mr-2" href="#">{{ picture.author.username }}</a>
         <small class="text-muted">{{ picture.date_taken.strftime('%Y-%m-%d') }}</small>
         {% if picture.place_taken %}
@@ -67,12 +67,6 @@
               <div class="row">
                 <div class="col-6"><b>{{ comment.user.username }}</b></div>
                 <div class="col-6" style="text-align: right">{{ comment.date_posted.strftime('%Y-%m-%d %H:%M') }}</div>
-                {% if comment.user == current_user %}
-                  <div>
-                    <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal"
-                            data-target="#deleteCommentModal">Delete comment</button>
-                  </div>
-                {% endif %}
               </div>
               <div class="row">
                 <div class="col-sm"><p class="text-justify">{{ comment.content }}</p></div>
@@ -95,30 +89,12 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('delete_picture', picture_id=picture.id) }}" method="POST">
+          <form action="{{ url_for('delete_picture', picture_id=picture.id, folder_id=picture.folder_id) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="Delete">
           </form>
         </div>
       </div>
     </div>
   </div>
-<!-- Modal for comments -->
-  <div class="modal fade" id="deleteCommentModal" tabindex="-1" role="dialog" aria-labelledby="deleteCommentModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="deleteCommentModalLabel">Delete Comment?</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('delete_comment', picture_id=picture.id, comment_id=comment.id) }}" method="POST">
-            <input class="btn btn-danger" type="submit" value="Delete">
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+
 {% endblock content %}
