--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -31,10 +31,12 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <!--<div class="hhh1"> -->
                 <div class="navbar-nav mr-auto">
-                  <a class="nav-item nav-link" href="{{ url_for('all_pictures') }}">All pictures</a>
-                  <a class="nav-item nav-link" href="{{ url_for('folders') }}">Albums</a>
-                  <a class="nav-item nav-link" href="{{ url_for('my_pictures') }}">My pictures</a>
-                </div><!-- -->
+                  {% if current_user.is_authenticated %}
+                      <a class="nav-item nav-link" href="{{ url_for('all_pictures') }}">All pictures</a>
+                      <a class="nav-item nav-link" href="{{ url_for('folders') }}">Albums</a>
+                      <a class="nav-item nav-link" href="{{ url_for('my_pictures') }}">My pictures</a>
+                  {% endif %}
+                </div> <!---->
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                   {% if current_user.is_authenticated %}
