--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -16,7 +16,7 @@
         </div>
         <div class="content-section">
             <hh1>Welcome!</hh1> <br>
-            <hh6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together</hh6>
+            <hh6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together.</hh6>
         </div>
         <div class="row">
             {% for picture in pictures %}
