--- a/flaskblog/templates/create_folder.html
+++ b/flaskblog/templates/create_folder.html
@@ -1,4 +1,70 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Om mig</h1>
+<div class="content-section">
+    <form method="POST" action="" enctype="multipart/form-data">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">{{ legend }}</legend>
+            <div class="form-group">
+                {{ form.title.label(class="form-control-label") }}
+                {% if form.title.errors %}
+                    {{ form.title(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.title.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.title(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.folder_image.label() }}
+                {{ form.folder_image(class="form-control-file") }}
+                {% if form.folder_image.errors %}
+                    {% for error in form.folder_image.errors %}
+                        <span class="text-danger">{{ error }}</span>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div action="/action_page.php">
+              <label for="start_date">Date trip started:</label>
+              <input type="date" id="start_date" name="start_date">
+            </div>
+            <div action="/action_page.php">
+              <label for="end_date">Date trip ended:</label>
+              <input type="date" id="end_date" name="end_date">
+            </div>
+            <div class="form-group">
+                {{ form.destinations.label(class="form-control-label") }}
+                {% if form.destinations.errors %}
+                    {{ form.destinations(class="form-control form-control-lg is-invalid") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.destinations.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.destinations(class="form-control form-control-lg") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.description.label(class="form-control-label") }}
+                {% if form.description.errors %}
+                    {{ form.description(class="form-control form-control-lg is-invalid", rows="5") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.description.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.description(class="form-control form-control-lg", rows="5") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.submit(class="btn btn-outline-info") }}
+        </div>
+    </form>
+</div>
 {% endblock content %}
