--- a/flaskblog/templates/folders.html
+++ b/flaskblog/templates/folders.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <!-- Side navigation -->
-    <a href="#">
+    <a href="/folder/new">
         <div class="add_button">
             <div class="header1">Add album</div>
             <div class="header2">+</div>
