--- a/flaskblog/templates/start.html
+++ b/flaskblog/templates/start.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-    <hh2>Welcome!</hh2>
-<h5>Please sign in to see and upload pictures.</h5>
+
+<div class="content-section">
+        <hh1>Welcome!</hh1> <br>
+        <hh6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp".
+            Please sign in to see and upload pictures</hh6>
+    </div>
 {% endblock content %}
