--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -26,7 +26,7 @@
               </div>
             </a>
             {% endfor %}
-        </div> <!--
+        </div>
 
     </div>
 {% endblock content %}
